# DirectX12

./: CMakeLists.txt  README.md  config.bat
include/triangle/: example.h
source/triangle/: example.cpp  main.cpp
